# uni-v4-hook-directional-liquidity

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  foundry.toml
docs/: LP-guide.md  keeper-guide.md  self-audit.md
reference/audit-guides/: certik-considerations.md  certora-best-practices.md  cyfrin-deep-dive.md  hacken-audit-guide.md  security-framework.md
reference/example-hooks/: AntiSandwichHook_sol.md  BaseCustomAccounting_sol.md  BaseCustomCurve_sol.md  Counter_sol.md  LimitOrderHook_sol.md  LiquidityPenaltyHook_sol.md  PointsHook_sol.md
reference/project-conventions/: architecture-overview.md  hooks-concepts.md  house-style.md  setup-and-first-hook.md
reference/v4-core-types/: BalanceDelta_sol.md  BeforeSwapDelta_sol.md  Currency_sol.md  IPoolManager_sol.md  LPFeeLibrary_sol.md  PoolId_sol.md  PoolKey_sol.md  PoolManager_sol.md  PoolOperation_sol.md  Slot0_sol.md  StateLibrary_sol.md  TransientStateLibrary_sol.md
reference/v4-hooks-base/: BaseHook_sol.md  (+3 more)
script/: DeployDirectionalLiquidityHook.s.sol
simulation/: .env.example  app.py  pyproject.toml  requirements.txt
simulation/src/dirsim/: __init__.py  data.py  hook.py  liquidity.py  pool.py  presets.py  sim.py
simulation/src/dirsim/lps/: base.py  mode.py  v3.py
simulation/tests/: test_hook.py  test_liquidity.py
spec/: DirectionalLiquidityHook-spec.md
src/: DirectionalLiquidityHook.sol
test/: DirectionalLiquidityHook.t.sol  DirectionalLiquidityHookFees.t.sol  DirectionalLiquidityHookInvariants.t.sol  DirectionalLiquidityHookNative.t.sol  ModeRange.t.sol  ShareMath.t.sol
(+2 files in other folders)
