[project]
name = "dirsim"
version = "0.0.1"
description = "Backtest simulator for the Directional Liquidity Hook"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.2,<3.0",
    "pyarrow>=15",
    "plotly>=5.20",
    "streamlit>=1.42",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
